@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-mod app;
+pub mod app;
 
 pub use self::app::AppWindow;
 pub use self::app::Options;
